--- a/ContactUs.html
+++ b/ContactUs.html
@@ -13,7 +13,7 @@
 </header>
 <nav>
     <ul class="nav">
-        <li><a href="Index.html">Home</a></li>
+        <li><a href="index.html">Home</a></li>
         <li><a href="LosFresnos.html">Los Fresnos</a></li>
         <li><a href="Harlingen.html">Harlingen</a></li>
         <li><a href="Austin.html">Austin</a></li>
