--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 </header>
 <nav>
     <ul class="nav">
-        <li class="current"><a href="Index.html">Home</a></li>
+        <li class="current"><a href="index.html">Home</a></li>
         <li><a href="LosFresnos.html">Los Fresnos</a></li>
         <li><a href="Harlingen.html">Harlingen</a></li>
         <li><a href="Austin.html">Austin</a></li>
