--- a/Harlingen.html
+++ b/Harlingen.html
@@ -21,7 +21,7 @@
 </nav>
 <section>
     <img src="Images/HarlingenLogo.png" alt="Logo of the City of Harlingen">
-    <a href="https://www.harlingentx.gov/page/homepage" target="_blank">Image Source</a>
+    <a href="https://www.harlingentx.gov/page/homepage" target="_blank">Image Source</a><br>
     <table>
         <tr>
             <th>Population</th>
