--- a/Austin.html
+++ b/Austin.html
@@ -21,7 +21,28 @@
 </nav>
 <section>
     <img src="Images/Austin.jpg" alt="Image of City From Lake Perspective">
-    <a href="https://pixabay.com/photos/austin-texas-tx-city-skyline-3468800/" target="_blank">Image Source</a>
+    <a href="https://pixabay.com/photos/austin-texas-tx-city-skyline-3468800/" target="_blank">Image Source</a><br>
+    <table>
+        <tr>
+            <th>Population</th>
+            <td>974,447<a href="https://en.wikipedia.org/wiki/Austin%2C_Texas" target="_blank">*</a></td>
+        </tr>
+        <tr>
+            <th>Year Incorporated</th>
+            <td>1839<a href="https://en.wikipedia.org/wiki/Austin%2C_Texas" target="_blank">*</a></td>
+        </tr>
+        <tr>
+            <th>Region</th>
+            <td>Central<a href="https://en.wikipedia.org/wiki/Austin%2C_Texas" target="_blank">*</a></td>
+        </tr>
+        <tr>
+            <th>Classification</th>
+            <td>Urban<a href="https://en.wikipedia.org/wiki/Austin%2C_Texas" target="_blank">*</a></td>
+        <tr>
+            <th>Avg. Income</th>
+            <td>54,091 USD<a href="https://en.wikipedia.org/wiki/Austin%2C_Texas" target="_blank">*</a></td>
+        </tr>
+    </table>
         <p>Emerging from a strong economic focus on government and education, since the 1990s, Austin 
             has become a center for technology and business. The technology roots in Austin can
             be traced back to the 1960s when Tracor (now BAE Systems), a major defense electronics 
