--- a/LosFresnos.html
+++ b/LosFresnos.html
@@ -21,7 +21,28 @@
 </nav>
 <section> 
     <img src="Images/LFLogo.png" alt="Logo for the City of Los Fresnos">
-    <a href="https://cityoflosfresnos.com/" target="_blank">Image Source</a>
+    <a href="https://cityoflosfresnos.com/" target="_blank">Image Source</a><br>
+    <table>
+        <tr>
+            <th>Population</th>
+            <td>8,114<a href="" target="_blank">*</a></td>
+        </tr>
+        <tr>
+            <th>Year Incorporated</th>
+            <td>1915<a href="" target="_blank">*</a></td>
+        </tr>
+        <tr>
+            <th>Region</th>
+            <td>South Central<a href="" target="_blank">*</a></td>
+        </tr>ni
+        <tr>
+            <th>Classification</th>
+            <td>Suburban<a href="" target="_blank">*</a></td>
+        <tr>
+            <th>Avg. Income</th>
+            <td>27,670 USD<a href="" target="_blank">*</a></td>
+        </tr>
+    </table>
   
 <p>If the love and pride in a community could be measured by the passion on display by all in attendance at a Friday night high school football game, the Los Fresnos area community would measure off the charts! Indeed, the love of “Falcon football” runs deep, very deep, but to say that the gridiron holds the sole source of pride for the local community would be a disservice, and it would be selling the area short… way short.<a href="https://cityoflosfresnos.com/" target="_blank">*</a></p>
 </section> 
