--- a/LosFresnos.html
+++ b/LosFresnos.html
@@ -25,19 +25,19 @@
     <table>
         <tr>
             <th>Population</th>
-            <td>8,114<a href="" target="_blank">*</a></td>
+            <td>8,114<a href="https://en.wikipedia.org/wiki/Los_Fresnos,_Texas" target="_blank">*</a></td>
         </tr>
         <tr>
             <th>Year Incorporated</th>
-            <td>1915<a href="" target="_blank">*</a></td>
+            <td>1915<a href="https://en.wikipedia.org/wiki/Los_Fresnos,_Texas" target="_blank">*</a></td>
         </tr>
         <tr>
             <th>Region</th>
-            <td>South Central<a href="" target="_blank">*</a></td>
+            <td>South Central<a href="https://en.wikipedia.org/wiki/Los_Fresnos,_Texas" target="_blank">*</a></td>
         </tr>ni
         <tr>
             <th>Classification</th>
-            <td>Suburban<a href="" target="_blank">*</a></td>
+            <td>Suburban<a href="https://en.wikipedia.org/wiki/Los_Fresnos,_Texas" target="_blank">*</a></td>
         <tr>
             <th>Avg. Income</th>
             <td>27,670 USD<a href="" target="_blank">*</a></td>
