--- a/LosFresnos.html
+++ b/LosFresnos.html
@@ -40,7 +40,7 @@
             <td>Suburban<a href="https://en.wikipedia.org/wiki/Los_Fresnos,_Texas" target="_blank">*</a></td>
         <tr>
             <th>Avg. Income</th>
-            <td>27,670 USD<a href="" target="_blank">*</a></td>
+            <td>27,670 USD<a href="https://en.wikipedia.org/wiki/Los_Fresnos,_Texas" target="_blank">*</a></td>
         </tr>
     </table>
   
